Use Java 17 string formatting
Slight simplification of the code through OpenRewrite